// Vitest Snapshot v1

exports[`parseMarkdown > converts tests/data/markdown/plainMarkdown.md 1`] = `
{
  "cells": [
    {
      "code": "### CSS

Use CSS to easily style the output of other cells (those written in Markdown or TypeScript).

<div class=\\"redText\\">This text is red, styled by the CSS cell above.</div>

### TypeScript / JavaScript

hello
",
      "id": "random",
      "language": "markdown",
    },
  ],
  "id": "tests/data/markdown/plainMarkdown.md",
}
`;

exports[`parseMarkdown > converts tests/data/markdown/withCSSAndTS.md 1`] = `
{
  "cells": [
    {
      "code": "### CSS

Use CSS to easily style the output of other cells (those written in Markdown or TypeScript).
",
      "id": "random",
      "language": "markdown",
    },
    {
      "code": ".redText {
  color: red;
}",
      "id": "random",
      "language": "css",
    },
    {
      "code": "<div class=\\"redText\\">This text is red, styled by the CSS cell above.</div>

### TypeScript / JavaScript
",
      "id": "random",
      "language": "markdown",
    },
    {
      "code": "export let message = \\"This is a TypeScript cell\\";",
      "id": "random",
      "language": "typescript",
    },
  ],
  "id": "tests/data/markdown/withCSSAndTS.md",
}
`;

exports[`parseMarkdown > converts tests/data/markdown/withId.md 1`] = `
{
  "cells": [
    {
      "code": "plain text
",
      "id": "random",
      "language": "markdown",
    },
    {
      "code": "export let x = 5;",
      "id": "random",
      "language": "typescript",
    },
  ],
  "id": "tests/data/markdown/withId.md",
}
`;
